refactor backend architecture and standardize API design