@@ -1,136 +1,171 @@
 package com.abdulmajid.expensetracker.service.impl;
 
-import com.abdulmajid.expensetracker.dto.UserRequest;
-import com.abdulmajid.expensetracker.dto.UserResponse;
+import com.abdulmajid.expensetracker.dto.request.UserRequest;
+import com.abdulmajid.expensetracker.dto.response.UserResponse;
 import com.abdulmajid.expensetracker.exception.custom.InvalidArgumentException;
 import com.abdulmajid.expensetracker.exception.custom.UserNotFoundException;
 import com.abdulmajid.expensetracker.model.User;
 import com.abdulmajid.expensetracker.repository.UserRepository;
 import com.abdulmajid.expensetracker.service.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Date;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+
 public class UserServiceImpl implements UserService {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
 
+    // CREATE USER
     @Override
-    public UserResponse createUser(UserRequest userRequest) {
-        if (!userRequest.getPassword().equals(userRequest.getcPassword())) {
-            throw new InvalidArgumentException("Password Must be Same ");
-        }
-        if (userRepository.existsByUserName(userRequest.getUserName())) {
-            throw new InvalidArgumentException("UserName Already Taken..Try Another One..");
-        }
-        if (userRepository.existsByEmail(userRequest.getEmail())) {
-            throw new InvalidArgumentException("Email Already in Use..Login please..");
-        }
-        if (userRepository.existsByPhone(userRequest.getPhone())) {
-            throw new InvalidArgumentException("Phone Already in Use....Try Another One.");
-        }
-        User user = new User(userRequest.getName(),
+    public UserResponse createUser(
+            UserRequest userRequest
+    ) {
+
+        validateUserRequest(userRequest);
+
+        User user = new User(
+                userRequest.getName(),
                 userRequest.getUserName(),
                 userRequest.getEmail(),
                 userRequest.getPassword(),
-                userRequest.getPhone());
-        userRepository.save(user);
+                userRequest.getPhone()
+        );
 
+        User savedUser = userRepository.save(user);
 
-        return new UserResponse(user.getId(),
-                user.getName(),
-                user.getUserName(),
-                user.getPhone(),
-                user.getEmail(),
-                user.getCreatedAt(),
-                user.getUpdatedAt());
-
-
-//       User user=userRepository.save(
-//        User.builder().name(userRequest.getName())
-//                .userName(userRequest.getUserName())
-//                .email(userRequest.getEmail())
-//                .password(userRequest.getPassword())
-//                .phone(userRequest.getPhone())
-//                .debt(userRequest.getDebt())
-//                .createdAt(new Date()).build()
-//             );
-
-//        return UserResponse.builder().id(user.getId())
-//                .name(user.getName())
-//                .userName(user.getUserName())
-//                .email(user.getEmail())
-//                .phone(user.getPhone())
-//                .createdAt(user.getCreatedAt())
-//                .updated_at(user.getUpdated_at()).build();
-
+        return mapToResponse(savedUser);
     }
 
+    // GET SINGLE USER
     @Override
-    public UserResponse getOneUser(Integer userId) {
+    public UserResponse getOneUser(
+            Integer userId
+    ) {
 
-        Optional<User> existsUser = userRepository.findById(userId);
-        if (existsUser.isPresent()) {
-            return new UserResponse(existsUser);
-        }
-        throw new UserNotFoundException("User With ID " + userId + " is Not Found");
+        User user = getUserById(userId);
 
-
+        return mapToResponse(user);
     }
 
+    // GET ALL USERS
     @Override
     public List<UserResponse> getAllUsers() {
 
-        return userRepository.findAll().stream()
-                .map(user -> new UserResponse(user.getId(),
-                        user.getName(),
-                        user.getUserName(),
-                        user.getEmail(),
-                        user.getPhone(),
-                        user.getExpense(),
-                        user.getIncome(),
-                        user.getDebt(),
-                        user.getLoan(),
-                        user.getCreatedAt(),
-                        user.getUpdatedAt()))
-                .collect(Collectors.toList());
-
-
+        return userRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
+    // UPDATE USER
     @Override
-    public UserResponse updateUser(Integer userId, UserRequest userRequest) {
-        Optional<User> existsUser = userRepository.findById(userId);
-        if (existsUser.isPresent()) {
-            User user = existsUser.get();
-            user.setName(userRequest.getName());
-            user.setUserName(userRequest.getUserName());
-            user.setUpdatedAt(new Date());
-            userRepository.save(user);
-            return new UserResponse(Optional.of(user));
-        }
-        throw new UserNotFoundException("User With ID " + userId + " is Not Found");
+    public UserResponse updateUser(
+
+            Integer userId,
+
+            UserRequest userRequest
+    ) {
+
+        User user = getUserById(userId);
+
+        user.setName(userRequest.getName());
+        user.setUserName(userRequest.getUserName());
+        user.setEmail(userRequest.getEmail());
+        user.setPhone(userRequest.getPhone());
+
+        User updatedUser = userRepository.save(user);
+
+        return mapToResponse(updatedUser);
     }
 
+    // DELETE USER
     @Override
-    public String deleteUser(Integer userId) {
+    public void deleteUser(
+            Integer userId
+    ) {
 
-        User existsUser = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + userId));
-        try {
-            // Remove income record
-            userRepository.delete(existsUser);
-        } catch (Exception e) {
-            e.printStackTrace();
+        User user = getUserById(userId);
+
+        userRepository.delete(user);
+    }
+
+    // HELPER METHOD
+    private User getUserById(Integer userId) {
+
+        return userRepository.findById(userId)
+                .orElseThrow(() ->
+                        new UserNotFoundException(
+                                "User not found with ID: " + userId
+                        )
+                );
+    }
+
+    // HELPER METHOD
+    private void validateUserRequest(
+            UserRequest userRequest
+    ) {
+
+        if (!userRequest.getPassword()
+                .equals(userRequest.getConfirmPassword())) {
+
+            throw new InvalidArgumentException(
+                    "Passwords do not match"
+            );
         }
-        return "Deleted Income Id : -> " + userId;
 
-        // not finis delete work now, also delete this user relete expense,income,etc...
+        if (userRepository.existsByUserName(
+                userRequest.getUserName()
+        )) {
+
+            throw new InvalidArgumentException(
+                    "Username already taken"
+            );
+        }
+
+        if (userRepository.existsByEmail(
+                userRequest.getEmail()
+        )) {
+
+            throw new InvalidArgumentException(
+                    "Email already in use"
+            );
+        }
+
+        if (userRepository.existsByPhone(
+                userRequest.getPhone()
+        )) {
+
+            throw new InvalidArgumentException(
+                    "Phone already in use"
+            );
+        }
+    }
+
+    // MAPPER METHOD
+    private UserResponse mapToResponse(
+            User user
+    ) {
+
+        UserResponse response = new UserResponse();
+
+        response.setId(user.getId());
+        response.setName(user.getName());
+        response.setUserName(user.getUserName());
+        response.setEmail(user.getEmail());
+        response.setPhone(user.getPhone());
+
+        response.setCreatedAt(
+                user.getCreatedAt()
+        );
+
+        response.setUpdatedAt(
+                user.getUpdatedAt()
+        );
+
+        return response;
     }
 }
